--- a/sample54.css
+++ b/sample54.css
@@ -10,10 +10,10 @@
 }
 
 #ani {
-  -webkit-animation-: 'anime' 5s ease -2s infinite alternate;
+  -webkit-animation: 'anime' 5s ease -2s infinite alternate;
 }
 
 @-webkit-keyframes 'anime' {
-  0% {width: 100px; height:20px, background-color: #000000;}
+  0% {width: 100px; height: 20px, background-color: #000000;}
   100% {width: 200px; height: 20px; background-color: #ffffff;}
 }
