--- a/sample57.css
+++ b/sample57.css
@@ -18,7 +18,7 @@ nav {
 }
 section {
   position: absolute;
-  top: 120px; left: 140px; height: 340px; wodth: 440px;
+  top: 120px; left: 140px; height: 340px; width: 440px;
 }
 footer {
   position: absolute;
