--- a/sample58.css
+++ b/sample58.css
@@ -3,7 +3,7 @@ body {
   background-image: url("../img/position.jpg");
 }
 header, nav, section, footer {
-  boarder:1px solid #999999;
+  border:1px solid #999999;
   border-radius:8px;
   padding: 10px 10px 10px 10px;
   background:#ffffff;
@@ -24,7 +24,7 @@ nav {
 section {
   margin: 10px 0px 10px 0px;
   float: right;
-  height: 380px; width: 640px;
+  height: 380px; width: 624px;
 }
 footer {
   margin: 0px 0px 0px 0px 0px;
