--- a/css/sample57.css
+++ b/css/sample57.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-  background-image: url("../img/position.jpg");
+  background-image: url("../img/surfing.jpg");
 }
 header, nav, section, footer {
   border:1px solid #999999;
